# AIPT---Training-service

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 002269fc4a93_.py  498fa4d521c3_.py  e6fec831e9a0_.py
app/api/: endpoints_training.py
app/models/: excercises  excercises.py  exercises.py  request.py  response.py  training  training.py  users.py
app/services/: graphql_service.py  training_service.py
app/utils/: exceptions.py  training_score  training_score.py
research/: Dockerfile  Training_plan_score.ipynb
tests/: manual.py
