[tool.poetry]
name = "artifitial-personal-trainer"
version = "0.1.0"
description = ""
authors = ["maciej.dobrzanski <matt950806@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
sqlmodel = "0.0.16"
fastapi = "^0.111.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
